Fix bgo493808 - incorrect painting when zoomed out 2007-11-05  Federico Mena Quintero  <federico@novell.com>

Fix these bugs:
	http://bugzilla.gnome.org/show_bug.cgi?id=493808
	https://bugzilla.novell.com/show_bug.cgi?id=336941

	* libgnomecanvas/gnome-canvas.c (paint): Oops, use the correct

Signed-off-by: Federico Mena Quintero <federico@gnu.org>

svn path=/trunk/; revision=1286